fix: allow all origins in CORS using wildcard pattern